[package]
name = "heatmap"
version = "0.1.0"
authors = ["Mike Walters <mike@flomp.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
clap = "2"
colorous = "1.0"
csv = "1.1"
lazy_static = "1.4"
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
