[package]
name = "plotsweep"
version = "0.1.0"

authors = ["Mike Walters <mike@flomp.net>"]
categories = ["command-line-utilities"]
description = "A tool to plot spectrogram images using hackrf_sweep, soapy_power, or rtl_power output."
homepage = "https://github.com/greatscottgadgets/plotsweep/"
keywords = ["spectrogram", "hackrf", "sweep", "sdr", "radio"]
license = "BSD-3-Clause"
repository = "https://github.com/greatscottgadgets/plotsweep/"

edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
colorous = "1.0"
csv = "1.1"
lazy_static = "1.4"
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
